# PassNest

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  server.js  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai_server.rs  clipboard.rs  mod.rs  vault_io.rs
src/components/ai/: AIMode.tsx
src/components/entries/: ApiKeyForm.tsx  DeleteConfirm.tsx  EntryCard.tsx  EntryList.tsx  PasswordForm.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
src/components/settings/: SettingsModal.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Spinner.tsx
src/components/vault/: UnlockScreen.tsx
src/crypto/: aes.ts  argon2.ts  utils.ts  vault-codec.ts
src/hooks/: useAutoLock.ts  useClipboard.ts  usePlatform.ts
src/lib/: passNestAI.ts
src/screens/: ApiKeysScreen.tsx  PasswordsScreen.tsx
src/storage/: adapter.ts  browser-adapter.ts  index.ts  server-adapter.ts  tauri-adapter.ts
src/store/: ai-store.ts  ui-store.ts  vault-store.ts
src/styles/: globals.css
src/types/: argon2-browser.d.ts  crypto.ts  ui.ts  vault.ts
